--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
       <aside>
         <img
           src="https://www.bhg.com/thmb/qnODK9_j7rgzgd0tB_euSE1dOqI=/1244x0/filters:no_upscale():strip_icc()/food-pantry-shelves-8e01c831-2b2be0d3eade4b9e9ec3c7e7deb27027.jpg"
-          alt="Image of a Pantry" style="width: 50%;"
+          alt="Image of a Pantry"
+          style="width: 41%"
         />
       </aside>
     </section>
@@ -65,7 +66,11 @@
         </ol>
       </div>
       <aside>
-        <img src="https://cdn.sanity.io/images/5dqbssss/production-v3/874f23dbc2e142d35d24ec7c8014e7511639d54a-8111x5410.jpg" alt="Image of Fridge" style="width: 50%;">
+        <img
+          src="https://cdn.sanity.io/images/5dqbssss/production-v3/874f23dbc2e142d35d24ec7c8014e7511639d54a-8111x5410.jpg"
+          alt="Image of Fridge"
+          style="width: 50%"
+        />
       </aside>
     </section>
   </body>
